white space pre err resolved

--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
@@ -181,7 +181,6 @@
   box-shadow: none;
   overflow-x: unset;
   overflow-y: unset;
-  white-space: pre;
   //added by chata end
 }
 
